adding rel to external links

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -24,7 +24,7 @@
           <input type="checkbox" id="developers">
           <ul class="sub-menu arrow-icon-top list-unstyled pt-0 pt-md-2 px-1 mx-2 mx-md-0 collapse" id="navbarToggler3">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" target="_blank" class="nav-svg-link d-flex align-items-center" title="Docs">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Docs">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-documents-icon"></use>
@@ -34,7 +34,7 @@
               </a>
             </li>
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" target="_blank" class="nav-svg-link d-flex align-items-center" title="SDK References">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="SDK References">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-sdk-icon"></use>
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="API Reference">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
@@ -54,7 +54,7 @@
               </a>
             </li>
             <li>
-              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
+              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Developer Chat">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-chat-icon"></use>
@@ -76,12 +76,12 @@
               <input type="checkbox" id="devChallenges">
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler7">
                 <li>
-                  <a href="https://github.com/OpenST" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
+                  <a href="https://github.com/OpenST" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Foundation Github">
                     <span class="pl-1">OpenSt Foundation</span>
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/orgs/ostdotcom/" target="_blank" class="nav-svg-link d-flex align-items-center" title="OST Github">
+                  <a href="https://github.com/orgs/ostdotcom/" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OST Github">
                     <span class="pl-1">OST</span>
                   </a>
                 </li>
@@ -134,12 +134,12 @@
               <input type="checkbox" id="devChallenges">
               <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler6">
                 <li>
-                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
+                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
                     <span class="pl-1">OpenSt Protocol</span>
                   </a>
                 </li>
                 <li class="mb-0 mb-md-2">
-                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
+                  <a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
                     <span class="pl-1">Mosaic Protocol</span>
                   </a>
                 </li>
@@ -185,7 +185,7 @@
               </a>
             </li>
             <li>
-              <a href="https://medium.com/ostdotcom" target="_blank" class="nav-svg-link d-flex align-items-center" title="Blog">
+              <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Blog">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-blog-icon"></use>
@@ -205,7 +205,7 @@
               </a>
             </li>
             <li>
-              <a href="https://help.ost.com" target="_blank" class="nav-svg-link d-flex align-items-center" title="Support">
+              <a href="https://help.ost.com" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex align-items-center" title="Support">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-support-icon"></use>
@@ -222,42 +222,42 @@
       <div class="d-none d-md-inline ml-auto" style="font-size: 0">
         <ul class="p-0 m-0">
           <li>
-            <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" target="_blank" title="OST - Podcast">
+            <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" rel="noopener noreferrer nofollow" target="_blank" title="OST - Podcast">
               <span class="header-social-podcast-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
+            <a href="https://t.me/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Telegram">
               <span class="header-social-telegram-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
+            <a href="https://twitter.com/OSTdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Twitter">
               <span class="header-social-twitter-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
+            <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Medium">
               <span class="header-social-medium-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
+            <a href="https://www.linkedin.com/company/18209852" rel="noopener noreferrer nofollow" target="_blank" title="OST - Linkedin">
               <span class="header-social-linkedIn-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
+            <a href="https://www.facebook.com/OST" rel="noopener noreferrer nofollow" target="_blank" title="OST - Facebook">
               <span class="header-social-facebook-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
+            <a href="https://www.youtube.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Youtube">
               <span class="header-social-youtube-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="OST - Gitter">
+            <a href="https://gitter.im/OpenSTFoundation/SimpleToken" rel="noopener noreferrer nofollow" target="_blank" title="OST - Gitter">
               <span class="header-social-gitter-icon"></span>
             </a>
           </li>
