--- a/app/views/web/ost/documents.html.erb
+++ b/app/views/web/ost/documents.html.erb
@@ -7,7 +7,7 @@
 
       <h4 class="mt-4"> Main Papers </h4>
       <h5 class="mt-4 pt-2">
-        <a href="https://drive.google.com/open?id=0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ" target="_blank">OpenST Protocol White Paper v0.8.3&nbsp;
+        <a href="https://drive.google.com/open?id=0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ" rel="noopener noreferrer nofollow" target="_blank">OpenST Protocol White Paper v0.8.3&nbsp;
           <svg class="icon-open-tab">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -18,7 +18,7 @@
       <p>The OpenST protocol establishes a bridge between the two blockchains, Ethereum mainnet and the Simple Token sidechain. Using a staking contract on Ethereum mainnet, and a corresponding minting contract on the sidechain, the protocol can atomically transfer tokens between the two chains, and thereby mint branded tokens on the sidechain by staking ST on the Ethereum mainnet.</p>
       <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
-        <a href="https://drive.google.com/file/d/1yTJdlagiEWXhrVJ3AOi8-nwur0nCBA5r/view" target="_blank">OpenST Protocol White Paper v0.8.3 (Korean)&nbsp;
+        <a href="https://drive.google.com/file/d/1yTJdlagiEWXhrVJ3AOi8-nwur0nCBA5r/view" rel="noopener noreferrer nofollow" target="_blank">OpenST Protocol White Paper v0.8.3 (Korean)&nbsp;
           <svg class="icon-open-tab">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -31,7 +31,7 @@
 
       <h4 class="mt-4">Side Papers</h4>
       <h5 class="mt-4 pt-2">
-        <a href="https://docs.google.com/document/d/1ccNDCJmEqLAw1tzdRZz1mEnJGF7tCNpVT8i88QeO5CM/edit?usp=sharing" target="_blank">The OpenST Protocol & Platform Utility&nbsp;<svg class="icon-open-tab">
+        <a href="https://docs.google.com/document/d/1ccNDCJmEqLAw1tzdRZz1mEnJGF7tCNpVT8i88QeO5CM/edit?usp=sharing" rel="noopener noreferrer nofollow" target="_blank">The OpenST Protocol & Platform Utility&nbsp;<svg class="icon-open-tab">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
           </switch>
@@ -42,7 +42,7 @@
       </p>
       <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
-        <a href="https://docs.google.com/document/d/13QibvDM5PjOdyVg0HzxZ-uhqb0q5a193XTcKGBwFD-A/edit" target="_blank">Governance: OpenST & The Simple Token Company&nbsp;<svg class="icon-open-tab">
+        <a href="https://docs.google.com/document/d/13QibvDM5PjOdyVg0HzxZ-uhqb0q5a193XTcKGBwFD-A/edit" rel="noopener noreferrer nofollow" target="_blank">Governance: OpenST & The Simple Token Company&nbsp;<svg class="icon-open-tab">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
           </switch>
@@ -53,7 +53,7 @@
       </p>
       <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
-        <a href="https://docs.google.com/document/d/1mg8PRWAD47D_VwyRBR4GN0f8y6ldyoLSzbi8DWb2Kew/edit#" target="_blank">Uses & Lifecycle of Demand for Simple Token&nbsp;<svg class="icon-open-tab">
+        <a href="https://docs.google.com/document/d/1mg8PRWAD47D_VwyRBR4GN0f8y6ldyoLSzbi8DWb2Kew/edit#" rel="noopener noreferrer nofollow" target="_blank">Uses & Lifecycle of Demand for Simple Token&nbsp;<svg class="icon-open-tab">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
           </switch>
@@ -64,7 +64,7 @@
       </p>
       <div class="horizontal-line"></div>
       <h5 class="mt-4 pt-2">
-        <a href="https://docs.google.com/document/d/1V6MZjojOYwVL8xoPQ09Pgzs93FUzBHLapcjcWOMHu18/edit?usp=sharing" target="_blank">Stabilizing Branded Tokens&nbsp;<svg class="icon-open-tab">
+        <a href="https://docs.google.com/document/d/1V6MZjojOYwVL8xoPQ09Pgzs93FUzBHLapcjcWOMHu18/edit?usp=sharing" rel="noopener noreferrer nofollow" target="_blank">Stabilizing Branded Tokens&nbsp;<svg class="icon-open-tab">
           <switch>
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
           </switch>
