--- a/app/views/web/ost/events_news/_events_content.erb
+++ b/app/views/web/ost/events_news/_events_content.erb
@@ -9,7 +9,7 @@
       </svg>
     </a>
       <div class="event-content-wrapper mb-4">
-        <a href="{{event_link}}" target="_blank" class="d-block" title="{{event_name}}">
+        <a href="{{event_link}}" rel="noopener noreferrer nofollow" target="_blank" class="d-block" title="{{event_name}}">
           <div class="row media content-wrapper pl-3 align-items-center">
             <div class="col-2 eventIconEl">
               <svg class="event-icons">
@@ -44,7 +44,7 @@ dates={{ymdDate event_date}}&
 details={{event_desc}}&
 location={{event_desc}}
 "
-               target="_blank">
+               rel="noopener noreferrer nofollow" target="_blank">
               <small > add to </small><br>Google Calendar</a>
 
           </div>
