--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -6,8 +6,8 @@
           <h2>Scalable Token Economies</h2>
           <p>OST is designed for internet-grade transaction volumes and speeds. OST leads development of the OpenST Protocol for launching Branded Token economies for mainstream businesses and OpenST Mosaic, a scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at low cost.</p>
           <div class="my-4">
-            <a href="https://github.com/OpenST" class="btn btn-primary my-2 my-md-3" title="GITHUB" target="_blank">GITHUB</a>
-            <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="PROTOCOL FORUM" target="_blank">PROTOCOL FORUM</a>
+            <a href="https://github.com/OpenST" class="btn btn-primary my-2 my-md-3" title="GITHUB" rel="noopener noreferrer nofollow" target="_blank">GITHUB</a>
+            <a href="https://discuss.openst.org/" class="btn btn-secondary openst-forum my-2 my-md-3 ml-3 " title="PROTOCOL FORUM" rel="noopener noreferrer nofollow" target="_blank">PROTOCOL FORUM</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 mx-auto d-none d-md-block">
@@ -34,7 +34,7 @@
               <p>The OpenST Protocol enables the creation of Branded Tokens as stored value on auxiliary blockchains with the value of those tokens backed by staked cryptoassets on Ethereum.</p>
             </div>
             <div>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="white-paper-link d-inline-block" rel="noopener noreferrer nofollow" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -42,7 +42,7 @@
                 </svg>
                 <span>OPENST WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenST/brandedtoken-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenST/brandedtoken-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" rel="noopener noreferrer nofollow" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
@@ -67,7 +67,7 @@
               <p style="flex: 1 1 auto;">OpenST Mosaic introduces metablockchains to enable internet-grade transaction throughput on Ethereum. Your transactions run at lightning speed on auxiliary blockchains with economic finality secured asynchronously on Ethereum.</p>
             </div>
             <div>
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link d-inline-block" target="_blank" title="WHITE PAPER">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" class="white-paper-link d-inline-block" rel="noopener noreferrer nofollow" target="_blank" title="WHITE PAPER">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#white-paper-blockchain-infrastructure"></use>
@@ -75,7 +75,7 @@
                 </svg>
                 <span>MOSAIC WHITE PAPER</span>
               </a>
-              <a href="https://github.com/OpenST/mosaic-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" target="_blank" title="GITHUB">
+              <a href="https://github.com/OpenST/mosaic-contracts" class="github-link ml-md-3 mt-3 mt-md-0 d-inline-block" rel="noopener noreferrer nofollow" target="_blank" title="GITHUB">
                 <svg width="15" height="15">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-github-icon"></use>
