--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -24,7 +24,7 @@
         <div id="event-carousel">
 
           <div class="bg-color">
-            <a href="<%= item['event_link'] %>" target="_blank" class="d-block" title="<%= item['event_name'] %>">
+            <a href="<%= item['event_link'] %>" rel="noopener noreferrer nofollow" target="_blank" class="d-block" title="<%= item['event_name'] %>">
               <div class="media content-wrapper align-items-center">
                 <span class="dateEl">
                   <svg width="90%" height="60" class="event-icons">
