--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -48,7 +48,7 @@
                 </svg>
               </div>
               <span class="font-weight-normal info-text text-left">
-                By submitting the info below you will be contacted via email due to the purpose of partnering opportunities with OST. Please refer to the OST <a href="<%= GlobalConstant::Base.root_url %>privacy" target="_blank" style="border-bottom: solid 1px #597a84" title="Privacy Policy">Privacy Policy</a> for more information.
+                By submitting the info below you will be contacted via email due to the purpose of partnering opportunities with OST. Please refer to the OST <a href="<%= GlobalConstant::Base.root_url %>privacy" rel="noopener noreferrer nofollow" target="_blank" style="border-bottom: solid 1px #597a84" title="Privacy Policy">Privacy Policy</a> for more information.
               </span>
             </label>
             <div class="error confirmation_error text-left" data-for="subscribe_confirmation"></div>
@@ -63,7 +63,7 @@
                   <!--<polyline points="4 11 8 15 16 6"></polyline>-->
                 <!--</svg>-->
               <!--</div>-->
-              <!--<span class="font-weight-normal info-text text-left">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>-->
+              <!--<span class="font-weight-normal info-text text-left">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" title="Privacy Policy" rel="noopener noreferrer nofollow" target="_blank">Privacy Policy</a>.</span>-->
             <!--</label>-->
           <!--</div>-->
 
