--- a/app/views/web/ost/partners/_jumbotron.erb
+++ b/app/views/web/ost/partners/_jumbotron.erb
@@ -8,7 +8,7 @@
           OST blockchain technology enables businesses to easily integrate branded tokens into their platforms to transform their communities into dynamic ecosystems. While anyone can access our developer resources, our partners benefit from hands-on OST blockchain strategy consulting and direct access to our product teams.
         </p>
         <a href="#contactus" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Contact Us">Contact Us</a>
-        <a href="#partner-pocs" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
+        <a href="#partner-pocs" rel="noopener noreferrer nofollow" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="VIEW INTEGRATIONS">VIEW INTEGRATIONS</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-4 mt-md-0">
