--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -288,7 +288,7 @@
       </h6>
 
       <p class="ml-2">
-        OST Wallet is a mobile app and it is a part of the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
+        OST Wallet is a mobile app and it is a part of the OST Platform experience. It allows our clients to test the wallet experience for sending and receiving tokens. We use <a href="https://fabric.io" rel="noopener noreferrer nofollow" target="_blank" style="color: #007bff" class="font-weight-bold"><u>Fabric</u></a> in order to analyze crashes and optimize the user experience. To do so, we need to collect the personal data found in the table below. If you wish to opt out from the collection of this data, please contact us at privacy@ost.com.
       </p>
 
       <table border="1" class="w-75 mb-4 ml-2">
@@ -469,7 +469,7 @@
 
       <p class="ml-3">You typically have the ability to accept or decline cookies by modifying the settings in your browser. If you choose to disable cookies, you may still use our site; however, you may have limited access to some areas within our website.</p>
 
-      <p class="ml-3">Additionally, you may use the following Google Add-on in order to opt-out from cookies: <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="color: #007bff" class="font-weight-bold"><u>https://tools.google.com/dlpage/gaoptout</u></a></p>
+      <p class="ml-3">Additionally, you may use the following Google Add-on in order to opt-out from cookies: <a href="https://tools.google.com/dlpage/gaoptout" rel="noopener noreferrer nofollow" target="_blank" style="color: #007bff" class="font-weight-bold"><u>https://tools.google.com/dlpage/gaoptout</u></a></p>
 
       <p class="ml-3">We also include web beacons in the emails we deliver for you. We use the data from those web beacons to create the reports about how your email campaign performed and what actions your Subscribers took. Reports are also available to us when we send email to you, so we may collect and review that information.</p>
 
