--- a/app/views/web/ost/roadmap/desktop/_2018-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q1.erb
@@ -28,7 +28,7 @@
                 <div class="status">Status: Complete</div>
                 <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
                   <li class="list-inline-item">
-                    <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v.0.9.2" target="_blank" title="OST Roadmap - Github">
+                    <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v.0.9.2" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                       <span class="roadmap-github-icon"></span>
                     </a>
                   </li>
@@ -44,7 +44,7 @@
                 <div class="status">Status: Complete</div>
                 <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
                   <li class="list-inline-item">
-                    <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+                    <a href="https://github.com/OpenSTFoundation/mosaic-contracts" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                       <span class="roadmap-github-icon"></span>
                     </a>
                   </li>
@@ -68,7 +68,7 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom/ost-launches-ost-kit-public-alpha-release-of-the-complete-blockchain-toolkit-for-business-211416488d2" target="_blank" title="OST Roadmap - Medium">
+            <a href="https://medium.com/ostdotcom/ost-launches-ost-kit-public-alpha-release-of-the-complete-blockchain-toolkit-for-business-211416488d2" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
@@ -81,7 +81,7 @@
           <li>Setup Economy</li>
           <li>Simulate Token Transfers</li>
         </ul>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
