--- a/app/views/web/ost/roadmap/desktop/_2018-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q2.erb
@@ -16,12 +16,12 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/watch?v=eRxrHOH0yZw&t=0s&list=PLpjYAvnxmJwLYrPpt1WUIyrdEdS8MYdZ9&index=2&ab_channel=OST" target="_blank" title="OST Roadmap - Youtube">
+            <a href="https://www.youtube.com/watch?v=eRxrHOH0yZw&t=0s&list=PLpjYAvnxmJwLYrPpt1WUIyrdEdS8MYdZ9&index=2&ab_channel=OST" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" target="_blank" title="OST Roadmap - Medium">
+            <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
@@ -30,7 +30,7 @@
         <ul class="desc-lines">
           <li>Token Transfers via API</li>
         </ul>
-        <a href="/challenges" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+        <a href="/challenges" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
