--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -13,17 +13,17 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" target="_blank" title="OST Roadmap - Youtube">
+            <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom/release-of-openst-protocol-v0-9-4-88c24a2618f6" target="_blank" title="OST Roadmap - Medium">
+            <a href="https://medium.com/ostdotcom/release-of-openst-protocol-v0-9-4-88c24a2618f6" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/OpenSTFoundation/openst-contracts" target="_blank" title="OST Roadmap - Github">
+            <a href="https://github.com/OpenSTFoundation/openst-contracts" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
               <span class="roadmap-github-icon"></span>
             </a>
           </li>
