--- a/app/views/web/ost/roadmap/desktop/_quarter-header.erb
+++ b/app/views/web/ost/roadmap/desktop/_quarter-header.erb
@@ -1,6 +1,6 @@
 <div class="row quarters-year-row">
   <div class="col-12">
-    <% if defined? header_link %><a href="<%= header_link %>" target="_blank" class="quarters-year-header" title='<%= year %> <%= quarter %>'><% end %>
+    <% if defined? header_link %><a href="<%= header_link %>" rel="noopener noreferrer nofollow" target="_blank" class="quarters-year-header" title='<%= year %> <%= quarter %>'><% end %>
       <div class="container-content pt-1 pb-0">
         <div class="row">
           <div class="col-3 align-self-center">
