--- a/app/views/web/ost/roadmap/mobile/_developer_tools.erb
+++ b/app/views/web/ost/roadmap/mobile/_developer_tools.erb
@@ -29,7 +29,7 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/ost-launches-ost-kit-public-alpha-release-of-the-complete-blockchain-toolkit-for-business-211416488d2" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/ost-launches-ost-kit-public-alpha-release-of-the-complete-blockchain-toolkit-for-business-211416488d2" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
@@ -42,7 +42,7 @@
         <li>Setup Economy</li>
         <li>Simulate Token Transfers</li>
       </ul>
-      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_transfers_create.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
@@ -62,7 +62,7 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
@@ -70,7 +70,7 @@
       <ul class="desc-lines">
         <li>Token Transfers via API</li>
       </ul>
-      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_token.html" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+      <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>docs/api_token.html" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
     </div>
   </div>
 </div>
@@ -90,7 +90,7 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
