--- a/app/views/web/ost/team/_early_backers.erb
+++ b/app/views/web/ost/team/_early_backers.erb
@@ -7,34 +7,34 @@
             <h2 class="heading mb-4 pb-3">Equity Investors</h2>
             <ul class="row m-0">
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://www.tencent.com/zh-cn/index.html" target="_blank" title="Tencent">
+                <a itemprop="url" href="https://www.tencent.com/zh-cn/index.html" rel="noopener noreferrer nofollow" target="_blank" title="Tencent">
                   <span class="tensent-logo"></span>
                 </a>
               </li>
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="http://bppe.com/" target="_blank" title="Blackpine">
+                <a itemprop="url" href="http://bppe.com/" rel="noopener noreferrer nofollow" target="_blank" title="Blackpine">
                   <span class="blackpine-logo"></span>
                 </a>
               </li>
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://www.greycroft.com/" target="_blank" title="Greycroft">
+                <a itemprop="url" href="https://www.greycroft.com/" rel="noopener noreferrer nofollow" target="_blank" title="Greycroft">
                   <span class="greycroft-logo"></span>
                 </a>
               </li>
             </ul>
             <ul class="row m-0">
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://500.co/" target="_blank" title="500 startups">
+                <a itemprop="url" href="https://500.co/" rel="noopener noreferrer nofollow" target="_blank" title="500 startups">
                   <span class="startups-logo"></span>
                 </a>
               </li>
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="https://vectr.co/" target="_blank" title="Vectr">
+                <a itemprop="url" href="https://vectr.co/" rel="noopener noreferrer nofollow" target="_blank" title="Vectr">
                   <span class="vectr-logo"></span>
                 </a>
               </li>
               <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                <a itemprop="url" href="http://correlationvc.com/" target="_blank" title="Corrilation Ventures">
+                <a itemprop="url" href="http://correlationvc.com/" rel="noopener noreferrer nofollow" target="_blank" title="Corrilation Ventures">
                   <span class="corrilation-logo"></span>
                 </a>
               </li>
