--- a/app/views/web/ost/team/_extended_team.erb
+++ b/app/views/web/ost/team/_extended_team.erb
@@ -8,34 +8,34 @@
               <h2 class="mb-4 pb-3 text-center">Extended Team</h2>
 <!--              <ul class="row">-->
 <!--                <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">-->
-<!--                  <a itemprop="url" href="https://www.smithandcrown.com/" title="Smith + Crown" target="_blank">-->
+<!--                  <a itemprop="url" href="https://www.smithandcrown.com/" title="Smith + Crown" rel="noopener noreferrer nofollow" target="_blank">-->
 <!--                    <span class="smith-crown-logo"></span>-->
 <!--                  </a>-->
 <!--                </li>-->
 <!--                <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">-->
-<!--                  <a itemprop="url" href="https://kenetic.capital/" title="Kenetic Capital" target="_blank">-->
+<!--                  <a itemprop="url" href="https://kenetic.capital/" title="Kenetic Capital" rel="noopener noreferrer nofollow" target="_blank">-->
 <!--                    <span class="kenetic-capital-logo"></span>-->
 <!--                  </a>-->
 <!--                </li>-->
 <!--                <li class="col-12 col-md-4" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">-->
-<!--                  <a itemprop="url" href="https://www.enuma.io/" title="Enuma Technologies" target="_blank">-->
+<!--                  <a itemprop="url" href="https://www.enuma.io/" title="Enuma Technologies" rel="noopener noreferrer nofollow" target="_blank">-->
 <!--                    <span class="enuma-technologies-logo"></span>-->
 <!--                  </a>-->
 <!--                </li>-->
 <!--              </ul>-->
               <ul class="row m-0">
                 <li class="col-12 col-md-4 d-flex align-items-center justify-content-center" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                  <a itemprop="url" href="https://www.perkinscoie.com/en/index.html" title="Perkins Coie" target="_blank">
+                  <a itemprop="url" href="https://www.perkinscoie.com/en/index.html" title="Perkins Coie" rel="noopener noreferrer nofollow" target="_blank">
                     <span class="perkins-coie-logo"></span>
                   </a>
                 </li>
                 <li class="col-12 col-md-4 d-flex align-items-center justify-content-center" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                  <a itemprop="url" href="http://www.duoh.com/" title="Duoh" target="_blank">
+                  <a itemprop="url" href="http://www.duoh.com/" title="Duoh" rel="noopener noreferrer nofollow" target="_blank">
                     <span class="duoh-logo"></span>
                   </a>
                 </li>
                 <li class="col-12 col-md-4 d-flex align-items-center justify-content-center" itemprop="affiliation" itemscope itemtype="http://schema.org/Organization">
-                  <a itemprop="url" href="http://www.kwm.com/en/" title="King & Wood Mallesons" target="_blank">
+                  <a itemprop="url" href="http://www.kwm.com/en/" title="King & Wood Mallesons" rel="noopener noreferrer nofollow" target="_blank">
                     <span class="king-wood-mallesons-logo"></span>
                   </a>
                 </li>
