--- a/app/views/web/ost/team/_security_auditors.erb
+++ b/app/views/web/ost/team/_security_auditors.erb
@@ -5,17 +5,17 @@
         <h2 class="mb-4 pb-3 text-center">Security Auditors</h2>
         <ul class="row">
           <li class="col-12 col-md-6 col-lg-4 security-content-wrap">
-            <a href="https://zeppelin.solutions/" title="Zeppelin" target="_blank">
+            <a href="https://zeppelin.solutions/" title="Zeppelin" rel="noopener noreferrer nofollow" target="_blank">
               <span class="z-audits-logo"></span>
             </a>
           </li>
           <li class="col-12 col-md-6 col-lg-4 security-content-wrap">
-            <a href="https://cure53.de/" title="Cure53" target="_blank">
+            <a href="https://cure53.de/" title="Cure53" rel="noopener noreferrer nofollow" target="_blank">
               <span class="cure53-logo"></span>
             </a>
           </li>
           <li class="col-12 col-md-12 col-lg-4 security-content-wrap">
-            <a href="https://www.bokconsulting.com.au/" title="Bok Consulting" target="_blank">
+            <a href="https://www.bokconsulting.com.au/" title="Bok Consulting" rel="noopener noreferrer nofollow" target="_blank">
               <span class="bok-consulting-logo"></span>
             </a>
           </li>
