--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -14,23 +14,23 @@
           <h6 class="text-uppercase">Products</h6>
           <ul class="footer-nav list-unstyled font-weight-normal">
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" title="OST Platform">OST Platform</a></li>
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" target="_blank" title="OST VIEW">OST VIEW</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" rel="noopener noreferrer nofollow" target="_blank" title="OST VIEW">OST VIEW</a></li>
             <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.kyc_root_url %>" title="OST KYC">OST KYC</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
           <h6 class="text-uppercase">Developers</h6>
           <ul class="footer-nav list-unstyled">
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" target="_blank" title="Docs">Docs</a></li>
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" target="_blank" title="SDK References">SDK References</a></li>
-            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" target="_blank" title="API Reference">API Reference</a></li>
-            <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="Developer Chat">Developer Chat</a></li>
-            <li><a href="https://github.com/OpenST" target="_blank" title="OpenST Foundation Github">OpenST Foundation Github</a></li>
-            <li><a href="https://github.com/ostdotcom" target="_blank" title="OST Github">OST Github</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform" rel="noopener noreferrer nofollow" target="_blank" title="Docs">Docs</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk" rel="noopener noreferrer nofollow" target="_blank" title="SDK References">SDK References</a></li>
+            <li><a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/api" rel="noopener noreferrer nofollow" target="_blank" title="API Reference">API Reference</a></li>
+            <li><a href="https://gitter.im/OpenSTFoundation/SimpleToken" rel="noopener noreferrer nofollow" target="_blank" title="Developer Chat">Developer Chat</a></li>
+            <li><a href="https://github.com/OpenST" rel="noopener noreferrer nofollow" target="_blank" title="OpenST Foundation Github">OpenST Foundation Github</a></li>
+            <li><a href="https://github.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST Github">OST Github</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>roadmap" title="Roadmap">Roadmap</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>challenges" title="Dev Challenges">Dev Challenges</a></li>
-            <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" title="OpenSt Protocol">OpenST Protocol Whitepaper</a></li>
-            <li><a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" title="Mosaic Protocol">Mosaic Protocol Whitepaper</a></li>
+            <li><a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" rel="noopener noreferrer nofollow" target="_blank" title="OpenSt Protocol">OpenST Protocol Whitepaper</a></li>
+            <li><a href="https://github.com/OpenST/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" rel="noopener noreferrer nofollow" target="_blank" title="Mosaic Protocol">Mosaic Protocol Whitepaper</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
@@ -39,10 +39,10 @@
             <li><a href="<%= GlobalConstant::Base.root_url %>team" title="Team">Team</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>partners" title="Partners">Partners</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>events-news" title="Events-News">Events & News</a></li>
-            <li><a href="https://medium.com/ostdotcom" target="_blank" title="Blog">Blog</a></li>
+            <li><a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="Blog">Blog</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>careers" title="Careers">Careers</a></li>
-            <li><a href="https://help.ost.com" target="_blank" title="Support">Support</a></li>
-            <li><a href="https://www.dropbox.com/sh/9tatk8guo1602e9/AABcTfgOVSSh9oo1h6vcXMHpa?dl=0" target="_blank" title="Media Kit">Media Kit</a></li>
+            <li><a href="https://help.ost.com" rel="noopener noreferrer nofollow" target="_blank" title="Support">Support</a></li>
+            <li><a href="https://www.dropbox.com/sh/9tatk8guo1602e9/AABcTfgOVSSh9oo1h6vcXMHpa?dl=0" rel="noopener noreferrer nofollow" target="_blank" title="Media Kit">Media Kit</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
@@ -50,8 +50,8 @@
           <ul class="footer-nav list-unstyled">
             <li><a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy">Privacy Policy</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>terms" title="Terms of Use">Terms of Use</a></li>
-            <li><a href="https://openst.org" target="_blank" title="OpenST Foundation">OpenST Foundation</a></li>
-            <li><a href="https://help.ost.com/support/solutions/articles/35000122226-impressum" target="_blank" title="Impressum">Impressum</a></li>
+            <li><a href="https://openst.org" rel="noopener noreferrer nofollow" target="_blank" title="OpenST Foundation">OpenST Foundation</a></li>
+            <li><a href="https://help.ost.com/support/solutions/articles/35000122226-impressum" rel="noopener noreferrer nofollow" target="_blank" title="Impressum">Impressum</a></li>
           </ul>
         </div>
         <div class="col-12 col-md mb-3 mb-sm-0">
@@ -59,42 +59,42 @@
             <h6 class="text-uppercase">Join The Community</h6>
             <ul class="footer-nav list-unstyled" style="font-size: 0">
               <li>
-                <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" target="_blank" title="OST - Podcast">
+                <a href="https://itunes.apple.com/us/podcast/ost-live-blockchain-branded-tokens-and-token-economies/id1432951800?mt=2" rel="noopener noreferrer nofollow" target="_blank" title="OST - Podcast">
                   <span class="footer-social-podcast-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
+                <a href="https://t.me/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Telegram">
                   <span class="footer-social-telegram-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
+                <a href="https://twitter.com/OSTdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Twitter">
                   <span class="footer-social-twitter-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
+                <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Medium">
                   <span class="footer-social-medium-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
+                <a href="https://www.linkedin.com/company/18209852" rel="noopener noreferrer nofollow" target="_blank" title="OST - Linkedin">
                   <span class="footer-social-linkedIn-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
+                <a href="https://www.facebook.com/OST" rel="noopener noreferrer nofollow" target="_blank" title="OST - Facebook">
                   <span class="footer-social-facebook-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
+                <a href="https://www.youtube.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Youtube">
                   <span class="footer-social-youtube-icon"></span>
                 </a>
               </li>
               <li>
-                <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" title="OST - Gitter">
+                <a href="https://gitter.im/OpenSTFoundation/SimpleToken" rel="noopener noreferrer nofollow" target="_blank" title="OST - Gitter">
                   <span class="footer-social-gitter-icon"></span>
                 </a>
               </li>
