--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -31,7 +31,7 @@
               </a>
             </li>
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="p-0" title="OST - VIEW" target="_blank">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.view_root_url %>" class="p-0" title="OST - VIEW" rel="noopener noreferrer nofollow" target="_blank">
                 <svg class="ost-kit-brand-nav-menu" width="86" height="16">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
@@ -58,7 +58,7 @@
           </a>
           <ul class="dropdown-menu mega-dropdown-menu">
             <li>
-              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" class="nav-svg-link d-flex" title="API Reference">
+              <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="API Reference">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-api-reference-icon"></use>
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex" title="White Paper">
+              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="White Paper">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
@@ -108,7 +108,7 @@
               </a>
             </li>
             <li>
-              <a href="https://github.com/OpenSTFoundation" target="_blank" class="nav-svg-link d-flex" title="Github">
+              <a href="https://github.com/OpenSTFoundation" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="Github">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-github-icon"></use>
@@ -118,7 +118,7 @@
               </a>
             </li>
             <li>
-              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" target="_blank" class="nav-svg-link d-flex" title="Developer Chat">
+              <a href="https://gitter.im/OpenSTFoundation/SimpleToken" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="Developer Chat">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-dev-chat-icon"></use>
@@ -155,7 +155,7 @@
               </a>
             </li>
             <li>
-              <a href="https://medium.com/ostdotcom" target="_blank" class="nav-svg-link d-flex" title="Blog">
+              <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="Blog">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-blog-icon"></use>
@@ -185,7 +185,7 @@
               </a>
             </li>
             <li>
-              <a href="https://help.ost.com" target="_blank" class="nav-svg-link d-flex" title="Support">
+              <a href="https://help.ost.com" rel="noopener noreferrer nofollow" target="_blank" class="nav-svg-link d-flex" title="Support">
                 <svg class="nav-svg">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-support-icon"></use>
@@ -220,37 +220,37 @@
       <div class="d-none d-md-inline" style="font-size: 0">
         <ul class="navbar-nav">
           <li>
-            <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
+            <a href="https://t.me/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Telegram">
               <span class="header-social-telegram-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
+            <a href="https://twitter.com/OSTdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Twitter">
               <span class="header-social-twitter-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
+            <a href="https://medium.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Medium">
               <span class="header-social-medium-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
+            <a href="https://www.linkedin.com/company/18209852" rel="noopener noreferrer nofollow" target="_blank" title="OST - Linkedin">
               <span class="header-social-linkedIn-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
+            <a href="https://www.facebook.com/OST" rel="noopener noreferrer nofollow" target="_blank" title="OST - Facebook">
               <span class="header-social-facebook-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
+            <a href="https://www.youtube.com/ostdotcom" rel="noopener noreferrer nofollow" target="_blank" title="OST - Youtube">
               <span class="header-social-youtube-icon"></span>
             </a>
           </li>
           <li class="ml-2">
-            <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">
+            <a href=" https://github.com/OpenSTFoundation" rel="noopener noreferrer nofollow" target="_blank" title="OST - Github">
               <span class="header-social-github-icon"></span>
             </a>
           </li>
