--- a/app/views/web/ost/alpha3submissions/_contact_us.erb
+++ b/app/views/web/ost/alpha3submissions/_contact_us.erb
@@ -78,7 +78,7 @@
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal">I agree to OST contacting me about the Alpha III POC Challenge, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal">I agree to OST contacting me about the Alpha III POC Challenge, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" rel="noopener noreferrer nofollow" target="_blank">Privacy Policy</a>.</span>
             </label>
             <div class="invalid-feedback" data-forname="ost_contact_user"></div>
           </div>
@@ -92,7 +92,7 @@
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.root_url %>privacy" title="Privacy Policy" rel="noopener noreferrer nofollow" target="_blank">Privacy Policy</a>.</span>
             </label>
           </div>
 
