--- a/app/views/web/ost/alpha3submissions/_jumbotron.erb
+++ b/app/views/web/ost/alpha3submissions/_jumbotron.erb
@@ -15,7 +15,7 @@
         </ul>
         <div class="alert alert-info mt-4" role="alert">
           <p class="mb-0">Make sure you clearly explain and demonstrate which in-app events are triggering a token transfer and upload your video on YouTube – <span class="font-weight-normal">Please ensure it's publicly viewable, with a maximum duration of 5:00 minutes.</span></p>
-          <p class="mb-0"><b>TIP:</b> <a href="https://youtu.be/-SxJ8c1Xh_A?t=1m09s" target="_blank"><u>Watch our demo</u></a> for an example of how to present a POC.</p>
+          <p class="mb-0"><b>TIP:</b> <a href="https://youtu.be/-SxJ8c1Xh_A?t=1m09s" rel="noopener noreferrer nofollow" target="_blank"><u>Watch our demo</u></a> for an example of how to present a POC.</p>
         </div>
       </div>
 
