--- a/app/views/web/ost/alpha3winners/_twitter_feed.erb
+++ b/app/views/web/ost/alpha3winners/_twitter_feed.erb
@@ -81,7 +81,7 @@
                 <div class="hidden-desc d-none">
                   <%= member[:desc] %>
                 </div>
-                <a  href="<%= member[:link] %>" target="_blank" class="disabled twitter-link">
+                <a  href="<%= member[:link] %>" rel="noopener noreferrer nofollow" target="_blank" class="disabled twitter-link">
                   <img class="twitter-user-img mx-auto" data-lazy="<%= member[:profile] %>"  />
                   <div class="twitter-handle mt-2 active" title="<%= member[:handle] %>">
                     <svg class="align-middle mr-2" style="height: 20px;width: 20px;">
