--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -14,7 +14,7 @@
         <% berlin_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" rel="noopener noreferrer nofollow" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                   <switch>
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -37,7 +37,7 @@
         <% pune_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" rel="noopener noreferrer nofollow" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -61,7 +61,7 @@
         <% new_york_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" rel="noopener noreferrer nofollow" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -84,7 +84,7 @@
         <% hong_kong_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" rel="noopener noreferrer nofollow" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
@@ -107,7 +107,7 @@
         <% europe_careers_response.each_with_index do|member, index| %>
 
           <h5 class="mt-4 pt-2">
-            <a href="<%= raw(member['careers_url']) %>" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
+            <a href="<%= raw(member['careers_url']) %>" rel="noopener noreferrer nofollow" target="_blank" title="<%= raw(member['careers_title']) %>"><%= raw(member['careers_title']) %>&nbsp;
               <svg class="icon-open-tab">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-open-tab"></use>
