--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -8,44 +8,44 @@
           <p class="my-4 col-lg-10 mx-auto">The OST token is a cryptocurrency that can be used for staking when minting Branded Tokens within the OpenST protocol. It is also a payment method in OST solutions. The OST token can be purchased only through third-party exchanges.</p>
           <div class="row">
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.okex.com/" target="_blank" title="Buy OST on Okex" >
+              <a class="d-block my-4" href="https://www.okex.com/" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Okex" >
                 <span class="buy-ost-okex-icon"></span>
               </a>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.binance.com/trade.html?symbol=OST_ETH" target="_blank" title="Buy OST on Binance" >
+              <a class="d-block my-4" href="https://www.binance.com/trade.html?symbol=OST_ETH" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Binance" >
                 <span class="buy-ost-binance-icon"></span>
               </a>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.hbg.com/ost_eth/exchange/" target="_blank" title="Buy OST on Huobi" >
+              <a class="d-block my-4" href="https://www.hbg.com/ost_eth/exchange/" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Huobi" >
                 <span class="buy-ost-huobi-icon"></span>
               </a>
             </div>
 
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.upbit.com/" target="_blank" title="Buy OST on Upbit" >
+              <a class="d-block my-4" href="https://www.upbit.com/" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Upbit" >
                 <span class="buy-ost-upbit-icon"></span>
               </a>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" title="Buy OST on Coinsuper" >
+              <a class="d-block my-4" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Coinsuper" >
                 <span class="buy-ost-coin-super-icon"></span>
               </a>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://www.idcm.io/trading/OST_BTC" target="_blank" title="Buy OST on IDCM" >
+              <a class="d-block my-4" href="https://www.idcm.io/trading/OST_BTC" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on IDCM" >
                 <span class="buy-ost-idcm-icon"></span>
               </a>
             </div>
 
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://kyber.network/swap/eth_knc" target="_blank" title="Buy OST on Kyber" >
+              <a class="d-block my-4" href="https://kyber.network/swap/eth_knc" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Kyber" >
                 <span class="buy-ost-kyber-icon"></span>
               </a>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-block my-4" href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" title="Buy OST on Bittrex" >
+              <a class="d-block my-4" href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" rel="noopener noreferrer nofollow" target="_blank" title="Buy OST on Bittrex" >
                 <span class="buy-ost-bittrex-icon"></span>
               </a>
             </div>
