--- a/app/views/web/ost/index/_openst_technology.erb
+++ b/app/views/web/ost/index/_openst_technology.erb
@@ -25,13 +25,13 @@
           <p>The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. Value tokens on Ethereum, e.g. OST, are transposed into utility Branded Tokens ("BT") of equivalent value on the utility chains and are at all times redeemable by the users for the staked value through the protocol.</p>
           <p>Application developers can design the token behavior that applies for their specific utility token with transaction types. Users can stake OST on Ethereum and receive an equivalent amount of BT within the application. The utility chains are powerful enough to host a decentralized key management smart contract engine that provides a smooth user experience for users within applications while retaining key ownership with the end-users.</p>
           <p>Decentralized key management additionally avoids liabilities for application developers hosting keys on behalf of their users. To ensure user confidence in the growing token economy smart contract pricing engines provide a toolbox to application developers to layer additional behavior on their BT, ranging from incentivization mechanisms to price guarantee (wet) contracts.</p>
-          <a href="https://github.com/OpenSTFoundation" class="text-link" target="_blank" title="View on github">view on github</a>
+          <a href="https://github.com/OpenSTFoundation" class="text-link" rel="noopener noreferrer nofollow" target="_blank" title="View on github">view on github</a>
         </div>
         <div class="row my-5">
           <h5>Scaling Up Blockchains</h5>
           <p>OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains with representations of the value that remains securely staked on Ethereum.</p>
           <p>Because OpenST Mosaic asynchronously couples the value chain with a utility chain, the number of utility chains that Ethereum can simultaneously support is not tightly bound. OpenST Mosaic further amplifies the growing capacity of Ethereum itself as an overlay network of blockchains. The OpenST utility chains also extend the established ETH gas market to pay for transaction fees, but the utility chains can run at a lower cost because OpenST Mosaic validators can operate in a collaborative environment guarded by Ethereum's adversarial Proof-of-Work.</p>
-          <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="text-link" target="_blank" title="Read the OpenST White Paper">Read the OpenST White Paper</a>
+          <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" class="text-link" rel="noopener noreferrer nofollow" target="_blank" title="Read the OpenST White Paper">Read the OpenST White Paper</a>
         </div>
       </div>
     </div>
@@ -43,7 +43,7 @@
           <h5>Empowering Developers</h5>
           <p>OpenST and OST KIT provide robust RESTful APIs to integrate advanced blockchain functionality with ease while observing the highest security standards. Or, use SDKs to get started even faster. Identity solutions allow the application to know their customer and calculate the correct taxes on services delivered.</p>
           <p>Universal wallets will allow users to seamlessly manage their funds and keys and to transact across token economies. Branded, embedded wallets will allow users within one economy to view their transactions and balance history. We invite developers to connect with us and to follow our documentation, guides, and recipes that make building any blockchain experience simple and easy.</p>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" target="_blank" title="Explore Developer Resources">Explore Developer Resources</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link" rel="noopener noreferrer nofollow" target="_blank" title="Explore Developer Resources">Explore Developer Resources</a>
         </div>
       </div>
     </div>
