--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -16,17 +16,17 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" target="_blank" title="OST Roadmap - Youtube">
+            <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" target="_blank" title="OST Roadmap - Medium">
+            <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" target="_blank" title="OST Roadmap - Github">
+            <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
               <span class="roadmap-github-icon"></span>
             </a>
           </li>
@@ -36,7 +36,7 @@
           <li>Mint Branded Tokens</li>
           <li>Mainnet Developer Release</li>
         </ul>
-        <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+        <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line second py-5 d-flex align-items-center">
