--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -16,7 +16,7 @@
             <div class="status">Status: Complete</div>
             <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
               <li class="list-inline-item">
-                <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+                <a href="https://github.com/OpenSTFoundation/mosaic-contracts" rel="noopener noreferrer nofollow" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                   <span class="roadmap-github-icon"></span>
                 </a>
               </li>
@@ -32,12 +32,12 @@
             <div class="status">Status: Complete</div>
             <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
               <li class="list-inline-item">
-                <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" target="_blank" title="OST Roadmap - Medium">
+                <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
                   <span class="roadmap-medium-icon"></span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/OpenSTFoundation/mosaic.js" target="_blank" title="OST Roadmap - Github">
+                <a href="https://github.com/OpenSTFoundation/mosaic.js" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                   <span class="roadmap-github-icon"></span>
                 </a>
               </li>
@@ -55,12 +55,12 @@
         <div class="status">Status: Complete</div>
         <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
           <li class="list-inline-item">
-            <a href="https://www.youtube.com/watch?v=FXG5aBiOobs&index=2&list=PLpjYAvnxmJwK4IJi49WETLOYAnV2nmqzd&t=0s&ab_channel=OST" target="_blank" title="OST Roadmap - Youtube">
+            <a href="https://www.youtube.com/watch?v=FXG5aBiOobs&index=2&list=PLpjYAvnxmJwK4IJi49WETLOYAnV2nmqzd&t=0s&ab_channel=OST" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
               <span class="roadmap-youtube-icon"></span>
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" target="_blank" title="OST Roadmap - Medium">
+            <a href="https://medium.com/ostdotcom/introducing-ost-ledger-balance-apis-to-integrate-branded-token-balances-and-transaction-histories-2420736070bb" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
               <span class="roadmap-medium-icon"></span>
             </a>
           </li>
@@ -69,7 +69,7 @@
         <ul class="desc-lines">
           <li>Wallet-lite Ledger & Balance APIs</li>
         </ul>
-        <a href="/challenges-2" class="d-block more-desc" target="_blank" title="Read More">Read More</a>
+        <a href="/challenges-2" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read More">Read More</a>
       </div>
     </div>
     <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
