--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -12,17 +12,17 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" target="_blank" title="OST Roadmap - Youtube">
+          <a href="https://www.youtube.com/watch?v=-SxJ8c1Xh_A" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
             <span class="roadmap-youtube-icon"></span>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" target="_blank" title="OST Roadmap - Github">
+          <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v0.9.0" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
             <span class="roadmap-github-icon"></span>
           </a>
         </li>
@@ -32,7 +32,7 @@
         <li>Mint Branded Tokens</li>
         <li>Mainnet Developer Release</li>
       </ul>
-      <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" target="_blank" title="Read more">Read more</a>
+      <a href="https://medium.com/ostdotcom/openst-0-9-1-released-d6d5a24d52de" class="d-block more-desc" rel="noopener noreferrer nofollow" target="_blank" title="Read more">Read more</a>
     </div>
   </div>
 </div>
@@ -61,7 +61,7 @@
           <div class="status">Status: Complete</div>
           <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
             <li class="list-inline-item">
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v.0.9.2" target="_blank" title="OST Roadmap - Github">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts/releases/tag/v.0.9.2" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                 <span class="roadmap-github-icon"></span>
               </a>
             </li>
@@ -77,7 +77,7 @@
           <div class="status">Status: Complete</div>
           <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
             <li class="list-inline-item">
-              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+              <a href="https://github.com/OpenSTFoundation/mosaic-contracts" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
                 <span class="roadmap-github-icon"></span>
               </a>
             </li>
@@ -106,7 +106,7 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://github.com/OpenSTFoundation/mosaic-contracts" target="_blank" title="OST Roadmap - Github">
+          <a href="https://github.com/OpenSTFoundation/mosaic-contracts" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
             <span class="roadmap-github-icon"></span>
           </a>
         </li>
@@ -122,12 +122,12 @@
       <div class="status">Status: In Progress</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/ost-contributes-openst-protocol-0-9-3-fully-decentralizing-the-openst-protocol-gateway-52719d9785b5" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://github.com/OpenSTFoundation/mosaic.js" target="_blank" title="OST Roadmap - Github">
+          <a href="https://github.com/OpenSTFoundation/mosaic.js" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
             <span class="roadmap-github-icon"></span>
           </a>
         </li>
@@ -154,17 +154,17 @@
       <div class="status">Status: Complete</div>
       <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
         <li class="list-inline-item">
-          <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" target="_blank" title="OST Roadmap - Youtube">
+          <a href="https://www.youtube.com/watch?v=V4yo-yvFNy8" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Youtube">
             <span class="roadmap-youtube-icon"></span>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://medium.com/ostdotcom/release-of-openst-protocol-v0-9-4-88c24a2618f6" target="_blank" title="OST Roadmap - Medium">
+          <a href="https://medium.com/ostdotcom/release-of-openst-protocol-v0-9-4-88c24a2618f6" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Medium">
             <span class="roadmap-medium-icon"></span>
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="https://github.com/OpenSTFoundation/openst-contracts" target="_blank" title="OST Roadmap - Github">
+          <a href="https://github.com/OpenSTFoundation/openst-contracts" rel="noopener noreferrer nofollow" target="_blank" title="OST Roadmap - Github">
             <span class="roadmap-github-icon"></span>
           </a>
         </li>
