--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -26,19 +26,19 @@
                   <p class="mb-2"><%=raw(member['members_list_description']) %></p>
                   <p>
                     <% if member['members_list_linkedIn'].present? %>
-                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_linkedIn']) %>">LinkedIn</a>
+                      <a class="profile-links" rel="noopener noreferrer nofollow" target="_blank" href="<%= raw(member['members_list_linkedIn']) %>">LinkedIn</a>
                     <% end %>
                     <% if member['members_list_twitter'].present? %>
                       <% if member['members_list_linkedIn'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_twitter']) %>">Twitter</a>
+                      <a class="profile-links" rel="noopener noreferrer nofollow" target="_blank" href="<%= raw(member['members_list_twitter']) %>">Twitter</a>
                     <% end %>
                     <% if member['members_list_medium'].present? %>
                       <% if member['members_list_linkedIn'].present? || member['members_list_twitter'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_medium']) %>">Medium</a>
+                      <a class="profile-links" rel="noopener noreferrer nofollow" target="_blank" href="<%= raw(member['members_list_medium']) %>">Medium</a>
                     <% end %>
                     <% if member['members_list_website'].present? %>
                       <% if member['members_list_linkedIn'].present? || member['members_list_twitter'].present? || member['members_list_medium'].present? %>•&nbsp;<% end %>
-                      <a class="profile-links" target="_blank" href="<%= raw(member['members_list_website']) %>">OST LIVE</a>
+                      <a class="profile-links" rel="noopener noreferrer nofollow" target="_blank" href="<%= raw(member['members_list_website']) %>">OST LIVE</a>
                     <% end %>
                   </p>
                 </div>
